Improve Missing Link Visuals * always shows coloured background with icon for better contrast * selection and drop border consistent width * remove number next to smart tags as it is misleading * fix quicksearch overflow on slide animation

--- a/resources/style/content.scss
+++ b/resources/style/content.scss
@@ -4,12 +4,10 @@
   border-radius: 6px;
   position: sticky;
   width: calc(100% - 0.75rem);
-  height: 100%;
   padding: 0 0.25rem;
   top: 0.2rem;
   z-index: 999;
   display: flex;
-  overflow-y: hidden;
   transition: max-height 200ms ease-in-out;
   border-bottom: 2px solid $black;
   box-shadow: $pt-dark-elevation-shadow-2;
@@ -54,14 +52,19 @@
 .quick-search-enter {
   max-height: 0;
 }
+
 .quick-search-enter-active {
   max-height: var(--toolbar-height);
+  overflow: hidden;
 }
+
 .quick-search-exit {
   max-height: var(--toolbar-height);
 }
+
 .quick-search-exit-active {
   max-height: 0;
+  overflow: hidden;
 }
 
 .gallery-content {
@@ -96,15 +99,11 @@
 
 /////////////////////// Thumbnail //////////////////////////////////
 .thumbnail {
-  // This is to demanding on processor
-  // transition: all 0.1s ease-in-out;
-  width: var(--thumbnail-size);
   height: var(--thumbnail-size);
   display: inline-flex;
   position: relative;
   overflow: hidden;
-  border-radius: 0.25rem;
-  // margin: 0.4rem;
+
   .image-error {
     display: flex;
     flex-direction: column;
@@ -115,25 +114,22 @@
     width: 100%;
     background: var(--foreground-color);
   }
+
   .h4 {
     grid-area: title;
   }
 
   .img-wrapper {
     grid-area: image;
-
     width: var(--thumbnail-size);
     height: var(--thumbnail-size);
     display: flex;
     justify-content: center;
     align-items: center;
-    // background-image: url(~resources/images/dots-dark.gif);
-    // background-size: 12%;
-    // background-repeat: no-repeat;
-    // background-position: 50% 50%;
+    border-radius: 0.25rem;
 
-    &:hover {
-      background: none !important;
+    &:hover img.broken-with-thumbnail {
+      filter: none;
     }
 
     .placeholder {
@@ -144,59 +140,48 @@
     .broken-overlay {
       cursor: pointer;
       position: absolute;
-      width: 2em;
-      height: 2em;
-      top: 2px;
-      right: 0px;
-      transition: all 0.1s ease-in-out;
+      padding: 0.25rem;
+      width: 2.25rem;
+      height: 2.25rem;
+      top: 0.5rem;
+      left: calc(var(--thumbnail-size) - 2.75rem);
+      border-radius: 50%;
+      background-color: orange;
+      color: white;
+
       svg {
-        filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.5));
-        transform: scale(1);
+        width: 1.75rem !important;
+        height: 1.75rem !important;
       }
-    }
-    .broken-overlay:hover {
-      svg {
-        filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.5));
-        transform: scale(1.05);
+
+      &:hover {
+        background-color: black;
       }
     }
 
     img {
-      // This is to demanding on processor
-      // transition: all 0.1s ease-in-out;
       background: var(--foreground-color);
       width: var(--thumbnail-size);
       height: var(--thumbnail-size);
-      // object-fit: cover;
       cursor: pointer;
       margin-left: auto;
       margin-right: auto;
       display: block;
-      transform-origin: center;
-      transition: 0.2s $pt-transition-ease2;
-      // transform: scale(1);
-      // transition: 0.2s $pt-transition-ease2;
+      clip-path: inset(0);
+      transition: clip-path 0.2s $pt-transition-ease2, filter 0.2s $pt-transition-ease2;
 
+      // Indicate missing image by making it B&W and darker
       &.broken-with-thumbnail {
-        // Indicate missing image by making it B&W and a little darker
-        filter: saturate(0) brightness(0.8);
-      }
-    }
-
-    &:hover {
-      img.broken-with-thumbnail {
-        // Restore saturation and brightness on hover
-        filter: saturate(1) brightness(1);
+        filter: saturate(0) brightness(0.6);
       }
     }
   }
 
-  &.selected {
+  &.selected .img-wrapper {
     background: $blue1;
 
     img {
-      transform: scale(0.9);
-      // transition: 0.2s $pt-transition-ease2;
+      clip-path: inset(0.5rem round 0.125rem);
     }
   }
 
@@ -208,11 +193,10 @@
   }
 
   &[data-dnd-target='true'] .img-wrapper {
-    background: $yellow1;
-    border-radius: 0.25rem;
+    background-color: $yellow1;
 
     img {
-      transform: scale(0.95);
+      clip-path: inset(0.5rem round 0.125rem);
     }
   }
 
@@ -231,6 +215,7 @@
       margin: 0.25em;
     }
   }
+
   &:hover .thumbnailTags {
     background-color: rgba(0, 0, 0, 0.25);
   }
@@ -258,49 +243,13 @@
 }
 /////////////////////// View methods //////////////////////////////////
 .list .thumbnail {
-  width: auto;
-  // height: 100%;
-  // margin-left: 0.4rem;
-  // margin-right: 0.4rem;
-
   display: grid;
   grid-column-gap: 1.5em;
-  grid-template-columns: auto 1fr;
-  // grid-template-rows:    auto 1fr;
+  grid-template-columns: min-content 1fr;
   grid-template-areas:
     'image title'
     'image info'
     'image tags';
-
-  &.selected .img-wrapper {
-    background: $blue1;
-    border-radius: 0.25rem;
-  }
-
-  &[data-dnd-target='true'] .img-wrapper {
-    background: $yellow1;
-    border-radius: 0.25rem;
-
-    img {
-      transform: scale(0.9);
-    }
-  }
-
-  &.selected {
-    background: none !important;
-  }
-
-  &.selected img {
-    transform: scale(0.9);
-  }
-
-  img {
-    position: absolute;
-    left: 0rem;
-    top: 0rem;
-    margin-left: 0;
-    border-radius: 0.25rem;
-  }
 
   span > * {
     text-align: left !important;
@@ -323,6 +272,7 @@
     align-self: end;
   }
 }
+
 .list div div > .list-item-even {
   background-color: rgba(102, 102, 102, 0.045);
   // padding: .3rem 0
@@ -347,49 +297,22 @@
 
 .grid .thumbnail {
   width: var(--thumbnail-size);
-  height: var(--thumbnail-size);
-
-  &.selected {
-    background: $blue1;
-  }
-
-  img {
-    width: var(--thumbnail-size);
-    height: var(--thumbnail-size);
-    position: absolute;
-    left: 0rem;
-    top: 0rem;
-    margin-left: 0;
-    border-radius: 0.25rem;
-  }
-
-  &[data-dnd-target='true'] img {
-    transform: scale(0.9);
-  }
 
   &[data-dnd-target='true'] .thumbnailTags {
     display: block;
-    overflow-y: hidden;
+    max-height: var(--thumbnail-size);
+    overflow-y: hidden; // prevent scrolling while dropping
   }
+
   .thumbnailTags {
-    transition: 0.25s $pt-transition-ease2;
+    transition: max-height 0.25s $pt-transition-ease2;
     max-height: 2.8em;
   }
+
   &:hover .thumbnailTags {
     max-height: var(--thumbnail-size);
     overflow-y: auto;
-    overflow-x: hidden;
   }
-  &[data-dnd-target='true'] .thumbnailTags {
-    max-height: var(--thumbnail-size);
-    overflow: hidden; // can't scroll while dropping
-  }
-
-  // display: flex;
-  // span:nth-child(3) {
-  //   z-index: -1;
-  //   background: red !important;
-  // }
 }
 // Fix for temp placeholder masonry smiley
 .masonry {
@@ -419,6 +342,7 @@
 .thumb-square:not(.slide) img {
   object-fit: cover;
 }
+
 .thumb-letterbox:not(.slide) img {
   object-fit: contain;
 }
