--- a/resources/style/global.scss
+++ b/resources/style/global.scss
@@ -27,7 +27,7 @@ body {
 }
 
 #app {
-  --outliner-width: 16em;
+  --outliner-width: 18em;
   --inspector-width: 24em;
   --toolbar-height: 2.4rem;
   --content-area-height: calc(100vh - var(--toolbar-height));
